--- a/de-research.html
+++ b/de-research.html
@@ -745,6 +745,78 @@
         </ol>
       </div>
 
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="dissertations">
+        <h3>Abschlussarbeiten <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>H. Xu</strong> [ETH], Prof. T. J. Schmidt (Betreuer/ETH), Prof. M. Stampanoni (Mitbetreuer/ETH), Dr.
+            J. Eller<br>
+            Subsekunden-Operando-Röntgentomographiemikroskopie von Flüssigwasser in Polymer-Elektrolyt-Brennstoffzellen
+            [D]<br>
+            2021 | <strong>Doktorarbeit</strong>. <text style="color:rgb(21, 32, 154)">[ETH Zürich]</text>,
+            Zürich, Schweiz. [<a href="https://doi.org/10.3929/ethz-b-000487441" target="_blank">PDF</a>]
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [TUM], Prof. P. Müller-Buschbaum (Betreuer), Prof. W. Schmahl (Mitbetreuer),
+            Dr. E. Metwalli <br>
+            Struktur und Eigenschaften von thermoresponsiven DBC eingebettet mit Metalloxid-Nanopartikeln [D]<br>
+            2016 | <strong>Masterarbeit</strong>. <text style="color:rgb(21, 127, 39)">[LMU
+              München]</text> & <text style="color:rgb(22, 92, 222)">[TU München]</text>. München,
+            Deutschland. [<a href="https://arxiv.org/abs/2007.10111" target="_blank">PDF</a>]
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [BJTU], Prof. H. Zhang (Betreuer), Prof. B. Liu (Mitbetreuer) <br>
+            Anwendung mesoporöser SnO2-Materialien in Farbstoffsolarzellen und Lithiumbatterien [D]<br>
+            2013 | <strong>Bachelorarbeit</strong>. <text style="color:rgb(14, 117, 212)">[Verkehrsuniversität
+              Peking]</text>. Peking, China.
+          </li>
+        </ol>
+      </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="dissertations">
+        <h3>Technische Berichte <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>H. Xu</strong> [TUM], Dr. B. Vinçon-Leite, Y. Luo<br>
+            Modellierung der Cyanobakteriendynamik für das YuQiao-Reservoir in Tianjin, China [R] <br>
+            2016 | Trainingsbericht. <text style="color:rgb(37, 142, 140)">[École des Ponts ParisTech]</text> & <text
+              style="color:rgb(30, 45, 73)">[École Polytechnique]</text>. Paris, Frankreich.
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [UR1], Dr. W. Lu, Dr. A. Madsen, Prof. S. Di Matteo<br>
+            Entwurf und Bau eines Teststands für die Split- und Verzögerungslinie am europäischen XFEL [R]<br>
+            2015 | Praktikumsbericht. <text style="color:rgb(67, 25, 237)">[Europäisches XFEL]</text>, Hamburg,
+            Deutschland. [<a href="https://arxiv.org/abs/2408.01472" target="_blank">PDF</a>]
+          </li>
+        </ol>
+      </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="datasets">
+        <h3>Öffentliche Datensätze <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>TomoBank: Röntgenbildgebungs-Datensatz von Brennstoffzellen</strong><br>
+            Kuratoren: M. Bührer, <strong>H. Xu*</strong> [PSI], F. Marone<br>
+            2019 | US-Energieministerium - Argonne National Laboratory © Urheberrecht. Rev. f4253f55. [<a
+              href="https://tomobank.readthedocs.io/en/latest/source/data/docs.data.dynamic.html#fuel-cell-data"
+              target="_blank">Link</a>]
+          </li>
+        </ol>
+      </div>
+
+
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
@@ -761,13 +833,15 @@
           <li>
             <strong>H. Xu</strong> [PSI], M. Bührer, F. Marone, T. J. Schmidt, F. N. Büchi, J. Eller<br>
             Einfluss der Porengrößenverteilung auf die Operando-Flüssigkeitssättigung in GDL.<br>
-            2019 | <em>236. Treffen der Electrochemical Society (ECS)</em>, Atlanta, USA. <strong>[Referent]</strong>
+            2019 | <em>236. Treffen der Electrochemical Society (ECS)</em>, Atlanta, USA.
+            <strong>[Referent]</strong>
             [<a href="http://ma.ecsdl.org/content/MA2019-02/32/1409.short" target="_blank">Link</a>]
           </li>
           <li>
             <strong>H. Xu</strong> [PSI], M. Bührer, F. Marone, T. J. Schmidt, F. N. Büchi, J. Eller<br>
             Fortschritte bei der 10Hz Operando-Röntgen-Tomographischen Bildgebung von Wasser in GDLs von PEFC.<br>
-            2018 | <em>8. Internationale Konferenz über Grundlagen und Entwicklung von Brennstoffzellen (FDFC)</em>,
+            2018 | <em>8. Internationale Konferenz über Grundlagen und Entwicklung von Brennstoffzellen
+              (FDFC)</em>,
             Nantes,
             Frankreich. <strong>[Referent]</strong> [<a href="https://fdfc2019.sciencesconf.org/"
               target="_blank">Link</a>]
@@ -776,7 +850,8 @@
             <strong>H. Xu</strong> [PSI], M. Bührer, F. Marone, T. J. Schmidt, F. N. Büchi, J. Eller<br>
             Studien zur Wasserverteilung in der Gasdiffusionsschicht von PEFCs mittels Röntgen-Tomographischer
             Mikroskopie<br>
-            2018 | <em>69. Jahrestagung der International Society of Electrochemistry (ISE)</em>, Bologna, Italien.
+            2018 | <em>69. Jahrestagung der International Society of Electrochemistry (ISE)</em>, Bologna,
+            Italien.
             <strong>[Poster]</strong> [<a href="https://www.ise-online.org/ise-conferences/past_ISE-meetings.php"
               target="_blank">Link</a>]
           </li>
@@ -784,7 +859,8 @@
             <strong>H. Xu</strong> [PSI], M. Bührer, F. Marone, T. J. Schmidt, F. N. Büchi, J. Eller<br>
             Wasserverteilung in der Gasdiffusionsschicht von PEFCs: Studien mittels Röntgen-Tomographischer
             Mikroskopie<br>
-            2018 | <em>15. Symposium über Brennstoffzellen-Modellierung und experimentelle Validierung (ModVal)</em>,
+            2018 | <em>15. Symposium über Brennstoffzellen-Modellierung und experimentelle Validierung
+              (ModVal)</em>,
             Aarau,
             Schweiz. <strong>[Best Poster Award]</strong> [<a href="https://indico.psi.ch/event/5151/"
               target="_blank">Link</a>]
@@ -800,9 +876,11 @@
           </li>
           <li>
             <strong>H. Xu</strong> [PSI], M. Bührer, F. Marone, T. J. Schmidt, F. N. Büchi, J. Eller<br>
-            Bewertung des Kontrast-Rausch-Verhältnisses für die Röntgen-Computertomographische Bildgebung von Wasser in
+            Bewertung des Kontrast-Rausch-Verhältnisses für die Röntgen-Computertomographische Bildgebung von
+            Wasser in
             Polymer-Elektrolyt-Brennstoffzellen<br>
-            2017 | <em>14. Symposium über Brennstoffzellen-Modellierung und experimentelle Validierung (ModVal)</em>,
+            2017 | <em>14. Symposium über Brennstoffzellen-Modellierung und experimentelle Validierung
+              (ModVal)</em>,
             Karlsruhe,
             Deutschland. <strong>[Poster]</strong> [<a href="https://www.modval14.kit.edu/" target="_blank">Link</a>]
           </li>
@@ -816,7 +894,8 @@
             <strong>H. Xu</strong> [TUM], E. Metwalli, P. Müller-Buschbaum<br>
             Magnetische Eigenschaften und Struktur von temperaturreaktiven
             Polystyrol-block-Poly(N-isopropylacrylamid)/Eisenoxid-Nanokomposit-Dünnfilmen.<br>
-            2016 | <em>80. Jahrestreffen der Deutschen Physikalischen Gesellschaft & DPG Frühjahrsmeeting (DPG)</em>,
+            2016 | <em>80. Jahrestreffen der Deutschen Physikalischen Gesellschaft & DPG Frühjahrsmeeting
+              (DPG)</em>,
             Regensburg,
             Deutschland. <strong>[Poster]</strong> [<a
               href="https://www.dpg-physik.de/aktivitaeten-und-programme/tagungen/fruehjahrstagungen"
@@ -840,24 +919,29 @@
           <h3>Aktienforschung</h3>
           <ul class="square">
             <li><strong>Branchen-Makroforschung (Großchina-Region):</strong><br>
-              2022 | <strong>Neue Energien</strong>: Antriebskräfte für Unternehmertum in Chinas neuer Energiebranche
+              2022 | <strong>Neue Energien</strong>: Antriebskräfte für Unternehmertum in Chinas neuer
+              Energiebranche
               unter der Dual-Carbon-Politik<br>
               2020 | <strong>Neue Materialien</strong>: Halbleitermaterialien Serie Teil 4: 5G treibt die optische
               Kommunikationsindustrie, Indiumphosphid-Materialien bereit für Wachstum<br>
               <hr>
             <li><strong>Primärmarktforschung (Finanzierungsrunden A bis D):</strong><br>
-              2021 | <strong>UISEE Technologie</strong>: Technologie-Pioniere Serie Bericht über UISEE Technologie:
+              2021 | <strong>UISEE Technologie</strong>: Technologie-Pioniere Serie Bericht über UISEE
+              Technologie:
               Anbieter von Mehr-Szenario-Autonomfahrlösungen<br>
               2021 | <strong>SemiDrive Technologie</strong>: Technologie-Pioniere Serie Bericht über SemiDrive
               Technologie: Anbieter von intelligenten Fahrzeug-Autonom-IP-Chips<br>
-              2021 | <strong>Xi'an ESWIN Halbleiter</strong>: Forschungsanalysebericht über Xi'an ESWIN Halbleiter<br>
+              2021 | <strong>Xi'an ESWIN Halbleiter</strong>: Forschungsanalysebericht über Xi'an ESWIN
+              Halbleiter<br>
               <hr>
             <li><strong>Sekundärmarktforschung (A-Aktien & US-notierte Unternehmen):</strong><br>
-              2021 | <strong>National Silicon Industry</strong> (688126.SH): Führender Pionier für große Siliziumwafer
+              2021 | <strong>National Silicon Industry</strong> (688126.SH): Führender Pionier für große
+              Siliziumwafer
               treibt die Lokalisierung von Chips voran (Erstberichterstattung)<br>
               2021 | <strong>CREE</strong> (NASDAQ:CREE): Technologie-Pioniere Serie Bericht über CREE: Globaler
               Anbieter von Leistungs-/RF-Bauelementen und LEDs (US-Aktie)<br>
-              2021 | <strong>Jingwei Hirain</strong> (688326.SH): Technologie-Pioniere Serie Bericht über Jingwei Hirain
+              2021 | <strong>Jingwei Hirain</strong> (688326.SH): Technologie-Pioniere Serie Bericht über Jingwei
+              Hirain
               Technologie: Anbieter von Technologien für Automobil-Elektronik<br>
               2020 | <strong>TankeBlue</strong> (870013.OC): Führender inländischer Hersteller von SiC-Wafern<br>
               2020 | <strong>Hangzhou Li-on Microelectronics</strong> (605358.SH): Breiter Markt für inländische
@@ -876,9 +960,13 @@
           <h3>Kontakt</h3>
           <ul class="square">
             <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                  class='blue'>h.xu
-                  [at] tum.de</span></a><br />Bei jeglichen Kooperationen oder Anfragen können Sie sich
-              gerne an mich wenden :- )</li>
+                  class='blue'>h.xu [at] tum.de</span></a> (Für Zusammenarbeit, Beratung oder Interviews,
+              kontaktieren
+              Sie
+              mich bitte!)<br /></li>
+            <li><strong>Online-Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                  class='blue'>calendly.com/heliosxu/45min</span></a> (1-zu-1-Meeting, bitte
+              im Voraus buchen)</li>
             <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
                 target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
             <li><strong>Google-Scholar ID</strong>: <a
@@ -932,10 +1020,10 @@
 
       <hr class="large" />
       <p>Ein <strong>endliches Spiel</strong> wird gespielt, um zu gewinnen, während <strong>ein unendliches
-          Spiel</strong> gespielt wird, um das Spiel fortzusetzen.<br /><small>Urheberrechte © 2016-
+          Spiel</strong> gespielt wird, um das Spiel fortzusetzen.<br /><small>Urheberrechte © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu
           |
-          Aktualisiert: 07.2024
+          Aktualisiert: 08.2024
         </small></p>
     </footer>
 
