--- a/de.html
+++ b/de.html
@@ -585,8 +585,10 @@
         <h3>Kontakt</h3>
         <ul class="square">
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a><br />Bei jeglichen Kooperationen oder Anfragen können Sie sich
-            gerne an mich wenden :- )</li>
+                class='blue'>h.xu [at] tum.de</span></a> (Für Zusammenarbeit, Beratung oder Interviews, kontaktieren Sie
+            mich bitte!)<br /></li>
+          <li><strong>Online-Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (1-zu-1-Meeting, bitte im Voraus buchen)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>Google-Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -645,9 +647,9 @@
 
       <hr class="large" />
       <p>Ein <strong>endliches Spiel</strong> wird gespielt, um zu gewinnen, während <strong>ein unendliches
-          Spiel</strong> gespielt wird, um das Spiel fortzusetzen.<br /><small>Urheberrechte © 2016-
+          Spiel</strong> gespielt wird, um das Spiel fortzusetzen.<br /><small>Urheberrechte © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu |
-          Aktualisiert: 07.2024
+          Aktualisiert: 08.2024
         </small></p>
     </footer>
 
