--- a/en.html
+++ b/en.html
@@ -673,8 +673,10 @@
         <h3>Contact</h3>
         <ul class="square">
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a><br />Please feel free to contact me in case of any
-            collaborations or requests : -)</li>
+                class='blue'>h.xu [at] tum.de</span></a> (Please feel free to contact me in case of any
+            collaborations or requests :-)<br /></li>
+          <li><strong>Online Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (1-on-1 meeting, please book in advance)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>Google Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -744,9 +746,9 @@
       </hr>
       <p>A <strong>finite game</strong> is played for <strong>winning</strong>, while an <strong>infinite
           game</strong> is played for <strong>continuing</strong> the play.<br />
-        <small>Copyright © 2016-
+        <small>Copyright © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu |
-          Updated: 07.2024 <a href="https://www.sigmatraffic.com?ref=232975"></a>
+          Updated: 08.2024 <a href="https://www.sigmatraffic.com?ref=232975"></a>
         </small>
       </p>
     </footer>
