--- a/es-research.html
+++ b/es-research.html
@@ -756,6 +756,84 @@
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
+      <div class="doc-section" id="dissertations">
+        <h3>Tesis <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>H. Xu</strong> [ETH], Prof. T. J. Schmidt (examinador), Prof. M. Stampanoni (co-examinador),
+            Dr. J. Eller (co-examinador)<br>
+            Microscopía Tomográfica de Rayos X Subsegundos Operando del Agua Líquida en Celdas de Combustible con
+            Electrolito Polimérico [D]<br>
+            2021 | <strong>Tesis de Doctorado</strong>. <text style="color:rgb(21, 32, 154)">[ETH Zurich]</text>,
+            Zúrich, Suiza. [<a href="https://doi.org/10.3929/ethz-b-000487441" target="_blank">PDF</a>]
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [TUM], Prof. P. Müller-Buschbaum (examinador), Prof. W. Schmahl
+            (co-examinador), Dr. E. Metwalli (TUM) <br>
+            Estructura y Propiedades de DBC Termorresponsive Incorporadas con Nanopartículas de Óxido Metálico [D] <br>
+            2016 | <strong>Tesis de Máster</strong>. <text style="color:rgb(21, 127, 39)">[LMU Munich]</text> & <text
+              style="color:rgb(22, 92, 222)">[TU Munich]</text>. Múnich, Alemania. [<a
+              href="https://arxiv.org/abs/2007.10111" target="_blank">PDF</a>]
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [BJTU], Prof. H. Zhang (examinador), Prof. B. Liu (co-examinador) <br>
+            Aplicación de Materiales de SnO2 Mesoporoso en Celdas Solares Sensibilizadas por Colorante y Baterías de
+            Litio [D] <br>
+            2013 | <strong>Tesis de Bachelor</strong>. <text style="color:rgb(14, 117, 212)">[Universidad Jiaotong de
+              Pekín]</text>. Pekín, China.
+          </li>
+        </ol>
+      </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="dissertations">
+        <h3>Informes Técnicos <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>H. Xu</strong> [TUM], Dr. B. Vinçon-Leite, Y. Luo<br>
+            Modelado de la Dinámica de Cianobacterias para el Embalse de YuQiao en Tianjin, China [R] <br>
+            2016 | Informe de Formación. <text style="color:rgb(37, 142, 140)">[École des Ponts ParisTech]</text> &
+            <text style="color:rgb(30, 45, 73)">[École Polytechnique]</text>. París, Francia.
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [UR1], Dr. W. Lu, Dr. A. Madsen, Prof. S. Di Matteo<br>
+            Diseño y Construcción de un Banco de Pruebas para la Línea de División y Retraso en el XFEL Europeo [R]<br>
+            2015 | Informe de Prácticas. <text style="color:rgb(67, 25, 237)">[European XFEL]</text>, Hamburgo,
+            Alemania. [<a href="https://arxiv.org/abs/2408.01472" target="_blank">PDF</a>]
+          </li>
+        </ol>
+      </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="datasets">
+        <h3>Conjuntos de Datos Públicos <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>TomoBank: Conjunto de Datos de Imágenes por Rayos X de Celdas de Combustible</strong><br>
+            Conservadores: M. Bührer, <strong>H. Xu*</strong> [PSI], F. Marone<br>
+            2019 | Departamento de Energía de EE. UU. - Laboratorio Nacional de Argonne © Derechos de Autor. Rev.
+            f4253f55. [<a
+              href="https://tomobank.readthedocs.io/en/latest/source/data/docs.data.dynamic.html#fuel-cell-data"
+              target="_blank">Enlace</a>]
+          </li>
+        </ol>
+      </div>
+
+
+
+
+
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
       <div class="doc-section" id="presentations">
         <h3>Conferencias<small><small></small></small></h3>
 
@@ -892,8 +970,11 @@
         <h3>Contacto</h3>
         <ul class="square">
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a><br />Siéntase libre de contactarme en caso de cualquier
-            colaboración o solicitud :- )</li>
+                class='blue'>h.xu [at] tum.de</span></a> (Siéntase libre de contactarme en caso de cualquier
+            colaboración o solicitud!)<br /></li>
+          <li><strong>Reunión en línea</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (reunión 1 a 1, por favor reserve con anticipación)
+          </li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>Google Académico</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -953,9 +1034,9 @@
       </div>
       <hr class="large" />
       <p><strong>Un juego finito</strong> se juega para ganar, mientras que <strong>un juego infinito</strong> se juega
-        para continuar el juego.<br /><small>Copyright © 2016-
+        para continuar el juego.<br /><small>Copyright © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dra. Hong Xú |
-          Actualizado: 03.2023
+          Actualizado: 08.2024
           </pequeño>
       </p>
     </footer>
