--- a/es.html
+++ b/es.html
@@ -590,8 +590,11 @@
         <h3>Contacto</h3>
         <ul class="square">
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a><br />Siéntase libre de contactarme en caso de cualquier
-            colaboración o solicitud :- )</li>
+                class='blue'>h.xu [at] tum.de</span></a> (Siéntase libre de contactarme en caso de cualquier
+            colaboración o solicitud!)<br /></li>
+          <li><strong>Reunión en línea</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (reunión 1 a 1, por favor reserve con anticipación)
+          </li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>Google Académico</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -651,9 +654,9 @@
       </div>
       <hr class="large" />
       <p><strong>Un juego finito</strong> se juega para ganar, mientras que <strong>un juego infinito</strong> se juega
-        para continuar el juego.<br /><small>Copyright © 2016-
+        para continuar el juego.<br /><small>Copyright © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dra. Hong Xú |
-          Actualizado: 03.2023
+          Actualizado: 08.2024
           </pequeño>
       </p>
     </footer>
