--- a/fr-activities.html
+++ b/fr-activities.html
@@ -735,8 +735,11 @@
         <h3>Contactez-moi</h3>
         <ul class="square">
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a><br />N'hésitez pas à me contacter pour toute collaboration ou
-            demande :- )</li>
+                class='blue'>h.xu [at] tum.de</span></a> (N'hésitez pas à me contacter pour toute collaboration ou
+            demande!)<br /></li>
+          <li><strong>Réunion en ligne</strong> : <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (réunion en tête-à-tête, veuillez réserver à
+            l'avance)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>ID Google Scholar</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -796,9 +799,9 @@
       </div>
       <hr class="large" />
       <p><strong>Un jeu fini</strong> est joué pour gagner, tandis qu'<strong>un jeu infini</strong> est joué pour
-        continuer le jeu.<br /><small>Droit d'auteur © 2016-
+        continuer le jeu.<br /><small>Droit d'auteur © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hóng Xú |
-          Actualisé: 03.2023
+          Actualisé: 08.2024
         </small></p>
     </footer>
 
