--- a/it-activities.html
+++ b/it-activities.html
@@ -667,8 +667,11 @@
         <h3>Contattami</h3>
         <ul class="square">
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a><br />Non esitate a contattarmi per qualsiasi collaborazione o
-            richiesta :- )</li>
+                class='blue'>h.xu [at] tum.de</span></a> (Non esitate a contattarmi per qualsiasi collaborazione o
+            richiesta!)<br /></li>
+          <li><strong>Riunione online</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (riunione 1 a 1, si prega di prenotare in anticipo)
+          </li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>ID Google Scholar</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -728,9 +731,9 @@
       </div>
       <hr class="large" />
       <p><strong>Una partita finita</strong> viene giocata per vincere, mentre <strong>una partita infinita</strong>
-        viene giocata per continuare la partita.<br /><small>Copyright © 2016-
+        viene giocata per continuare la partita.<br /><small>Copyright © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu |
-          Aggiornato: 03.2023
+          Aggiornato: 08.2024
           </piccolo>
       </p>
     </footer>
