--- a/jp-research.html
+++ b/jp-research.html
@@ -803,6 +803,47 @@
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
+      <div class="doc-section" id="tech-reports">
+        <h3>技術報告 <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>H. Xu</strong> [TUM], Dr. B. Vinçon-Leite, Y. Luo<br>
+            Modelling of Cyanobacteria Dynamics for YuQiao Reservoir in Tianjin, China [R]<br>
+            訳文: 中国天津市の于橋ダムにおける藍藻ダイナミクスモデルの研究 [R] <br>
+            2016 | トレーニング報告書. <text style="color:rgb(37, 142, 140)">[エコール・デ・ポン・パリテック]</text> & <text
+              style="color:rgb(30, 45, 73)">[エコール・ポリテクニーク]</text>. パリ、フランス.
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [UR1], Dr. W. Lu, Dr. A. Madsen, Prof. S. Di Matteo<br>
+            Design and Construction of a Test-Stand for the Split and Delay Line at the European XFEL [R]<br>
+            訳文: 欧州X線自由電子レーザーの分割および遅延ラインのテストスタンドの設計と構築 [R] <br>
+            2015 | インターンシップ報告書. <text style="color:rgb(67, 25, 237)">[欧州XFEL]</text>, ハンブルク、ドイツ. [<a
+              href="https://arxiv.org/abs/2408.01472" target="_blank">PDF</a>]
+          </li>
+        </ol>
+      </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="datasets">
+        <h3>公開データセット <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>TomoBank: 燃料電池X線イメージングデータセット</strong><br>
+            キュレーター: M. Bührer, <strong>H. Xu*</strong> [PSI], F. Marone<br>
+            2019 | アルゴンヌ国立研究所 - 米国エネルギー省 © 著作権. Rev. f4253f55. [<a
+              href="https://tomobank.readthedocs.io/en/latest/source/data/docs.data.dynamic.html#fuel-cell-data"
+              target="_blank">リンク</a>]
+          </li>
+        </ol>
+      </div>
+
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
       <div class="doc-section" id="cooperation">
         <h3>学術協力<small><small> (2013-2024)</small></small></h3>
         <br>
@@ -1050,7 +1091,9 @@
         <h3>私に連絡して</h3>
         <ul class="square">
           <li><strong>メール</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu
-                [at] tum.de</span></a><br /></li>
+                [at] tum.de</span></a> (協力、相談、またはメディアインタビューはご連絡ください!)<br /></li>
+          <li><strong>オンライン会議</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (1対1の会議、事前に予約してください)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>グーグル学者</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -1109,11 +1152,11 @@
       </div>
 
       <hr class="large" />
-      <p><strong>有限のゲーム</strong>は勝つこと、<strong>無限のゲーム</strong>は継続すること。<br /><small>著作権 © 2016-
+      <p><strong>有限のゲーム</strong>は勝つこと、<strong>無限のゲーム</strong>は継続すること。<br /><small>著作権 © 2016 -
           <script
             id="second-script">const currentYear2 = new Date().getFullYear(); document.write(currentYear2);</script> |
           徐泓
-          <small>博士</small> | 最終更新: 2024年7月
+          <small>博士</small> | 最終更新: 2024年8月
         </small></p>
     </footer>
 
