--- a/jp-resume.html
+++ b/jp-resume.html
@@ -761,7 +761,9 @@
         <h3>私に連絡して</h3>
         <ul class="square">
           <li><strong>メール</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu
-                [at] tum.de</span></a><br /></li>
+                [at] tum.de</span></a> (協力、相談、またはメディアインタビューはご連絡ください!)<br /></li>
+          <li><strong>オンライン会議</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (1対1の会議、事前に予約してください)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>グーグル学者</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -820,11 +822,11 @@
       </div>
 
       <hr class="large" />
-      <p><strong>有限のゲーム</strong>は勝つこと、<strong>無限のゲーム</strong>は継続すること。<br /><small>著作権 © 2016-
+      <p><strong>有限のゲーム</strong>は勝つこと、<strong>無限のゲーム</strong>は継続すること。<br /><small>著作権 © 2016 -
           <script
             id="second-script">const currentYear2 = new Date().getFullYear(); document.write(currentYear2);</script> |
           徐泓
-          <small>博士</small> | 最終更新: 2024年7月
+          <small>博士</small> | 最終更新: 2024年8月
         </small></p>
     </footer>
 
