--- a/kr-research.html
+++ b/kr-research.html
@@ -818,6 +818,48 @@
         </ol>
       </div>
 
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="dissertations">
+        <h3>기술 보고서 <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>H. Xu</strong> [TUM], Dr. B. Vinçon-Leite, Y. Luo<br>
+            Modelling of Cyanobacteria Dynamics for YuQiao Reservoir in Tianjin, China [R] <br>
+            번역: 중국 톈진 우차오 저수지의 남세균 동력학 모델 연구 [R] <br>
+            2016 | 교육 보고서. <text style="color:rgb(37, 142, 140)">[파리 공과대학]</text> & <text
+              style="color:rgb(30, 45, 73)">[에콜 폴리테크닉]</text>. 파리, 프랑스.
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [UR1], Dr. W. Lu, Dr. A. Madsen, Prof. S. Di Matteo<br>
+            Design and Construction of a Test-Stand for the Split and Delay Line at the European XFEL [R]<br>
+            번역: 유럽 X선 자유 전자 레이저의 분할 및 지연 라인 테스트 스탠드 설계 및 구축 [R] <br>
+            2015 | 인턴십 보고서. <text style="color:rgb(67, 25, 237)">[유럽 XFEL]</text>, 함부르크, 독일. [<a
+              href="https://arxiv.org/abs/2408.01472" target="_blank">PDF</a>]
+          </li>
+        </ol>
+      </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="datasets">
+        <h3>공개 데이터셋 <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>TomoBank: 연료 전지 X선 이미징 데이터셋</strong><br>
+            큐레이터: M. Bührer, <strong>H. Xu*</strong> [PSI], F. Marone<br>
+            2019 | 미국 에너지부 - 아르곤 국립 연구소 © 저작권. Rev. f4253f55. [<a
+              href="https://tomobank.readthedocs.io/en/latest/source/data/docs.data.dynamic.html#fuel-cell-data"
+              target="_blank">링크</a>]
+          </li>
+        </ol>
+      </div>
+
+
+
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
@@ -1042,7 +1084,9 @@
         <h3>저에게 연락</h3>
         <ul class="square">
           <li><strong>이메일</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu
-                [at] tum.de</span></a><br />협업이나 요청이 있으시면 언제든지 저에게 연락 주시기 바랍니다 :- )</li>
+                [at] tum.de</span></a> (협업이나 요청이 있으시면 언제든지 저에게 연락 주시기 바랍니다 :-)<br /></li>
+          <li><strong>온라인 회의</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (1대1 회의, 사전 예약 바랍니다)</li>
           <li><strong>링크드인</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
                 class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>구글 학자 아이디</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -1109,11 +1153,11 @@
       </div>
 
       <hr class="large" />
-      <p>이기기 위해 유한 게임을 하고, 플레이를 계속하기 위해 무한 게임을 합니다. <br /><small>저작권 © 2016-
+      <p>이기기 위해 유한 게임을 하고, 플레이를 계속하기 위해 무한 게임을 합니다. <br /><small>저작권 © 2016 -
           <script
             id="second-script">const currentYear2 = new Date().getFullYear(); document.write(currentYear2);</script> |
           홍쉬 박사 | 업데이트 날짜:
-          2023년 3월
+          2024년 8월
         </small>
 
       </p>
