--- a/ar-research.html
+++ b/ar-research.html
@@ -755,6 +755,90 @@
       </div>
 
 
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="dissertations" style="text-align: right; direction: rtl;">
+        <h3>الأطروحات <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>H. Xu</strong> [ETH]، البروفيسور ت. ج. شميت (مُقيِّم)، البروفيسور م. ستامبانوني (مُقيِّم مساعد)،
+            د. ج. إيلر (مُقيِّم مساعد)<br>
+            Subsecond Operando X-ray Tomographic Microscopy of Liquid Water in Polymer Electrolyte Fuel
+            Cells [D]<br>
+            المجهر الطيفي الرنين الضوئي بالأشعة السينية السريعة للميكروبات المائية السائلة في خلايا الوقود بالإلكتروليت
+            البوليمري<br>
+            2021 | <strong>أطروحة دكتوراه</strong>. <text style="color:rgb(21, 32, 154)">[ETH Zurich]</text>,
+            زيورخ، سويسرا. [<a href="https://doi.org/10.3929/ethz-b-000487441" target="_blank">PDF</a>]
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [TUM]، البروفيسور ب. ميولر-بوشباوم (مُقيِّم)، البروفيسور و. شمائل
+            (مُقيِّم مساعد)،
+            د. إ. متوالي (TUM) <br>
+            Structure & Properties of Thermoresponsive DBC Embedded with Metal Oxide Nanoparticles. [D]
+            بنية وخصائص DBC المتجاوبة مع الحرارة المدمجة بجسيمات أكسيد المعدن<br>
+            2016 | <strong>أطروحة ماجستير</strong>. <text style="color:rgb(21, 127, 39)">[LMU ميونيخ]</text> & <text
+              style="color:rgb(22, 92, 222)">[TU ميونيخ]</text>. ميونيخ، ألمانيا. [<a
+              href="https://arxiv.org/abs/2007.10111" target="_blank">PDF</a>]
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [BJTU]، البروفيسور ه. تشانغ (مُقيِّم)، البروفيسور ب. ليو (مُقيِّم مساعد) <br>
+            Application of Mesoporous SnO2 Materials in Dye-sensitized Solar Cells and Lithium
+            Batteries.
+            [D] <br>
+            تطبيق المواد المسامية من SnO2 في خلايا الطاقة الحساسة للألوان وبطاريات الليثيوم <br>
+            2013 | <strong>أطروحة بكالوريوس</strong>. <text style="color:rgb(14, 117, 212)">[جامعة بكين
+              جياوتونغ]</text>. بكين، الصين.
+          </li>
+        </ol>
+      </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="tech-reports" style="text-align: right; direction: rtl;">
+        <h3>التقارير الفنية <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>H. Xu</strong> [TUM], Dr. B. Vinçon-Leite, Y. Luo<br>
+            Modelling of Cyanobacteria Dynamics for YuQiao Reservoir in Tianjin, China [R] <br>
+            نمذجة ديناميات السيانوبكتيريا لخزان يو تشياو في تيانجين، الصين <br>
+            2016 | تقرير تدريبي. <text style="color:rgb(37, 142, 140)">[École des Ponts ParisTech]</text> & <text
+              style="color:rgb(30, 45, 73)">[École Polytechnique]</text>. باريس، فرنسا.
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [UR1], Dr. W. Lu, Dr. A. Madsen, Prof. S. Di Matteo<br>
+            Design and Construction of a Test-Stand for the Split and Delay Line at the European XFEL [R]<br>
+            تصميم وبناء منصة اختبار لخط الفصل والتأخير في European XFEL<br>
+            2015 | تقرير عن التدريب. <text style="color:rgb(67, 25, 237)">[European XFEL]</text>، هامبورغ، ألمانيا. [<a
+              href="https://arxiv.org/abs/2408.01472" target="_blank">PDF</a>]
+          </li>
+        </ol>
+      </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="datasets" style="text-align: right; direction: rtl;">
+        <h3>مجموعات البيانات العامة <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>TomoBank: مجموعة بيانات تصوير بالأشعة السينية لخلايا الوقود</strong><br>
+            القيمون: م. بوير، <strong>H. Xu*</strong> [PSI]، ف. مارون<br>
+            2019 | وزارة الطاقة الأمريكية - مختبر أرجون الوطني © حقوق الطبع والنشر. Rev. f4253f55. [<a
+              href="https://tomobank.readthedocs.io/en/latest/source/data/docs.data.dynamic.html#fuel-cell-data"
+              target="_blank">رابط</a>]
+          </li>
+        </ol>
+      </div>
+
+
+
+
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
@@ -883,7 +967,9 @@
         <h3 style="text-align: right;">تواصل معي</h3>
         <ul class="square" style="text-align: right; direction: rtl;">
           <li><strong>البريد الإلكتروني</strong>: <a href="mailto:h.xu@tum.de" target="_blank"><span class='blue'>h.xu
-                [at] tum.de</span></a><br />لا تتردد في التواصل معي في حالة أي تعاون أو طلبات. :-)</li>
+                [at] tum.de</span></a> (لا تتردد في التواصل معي في حالة أي تعاون أو طلبات. :-)<br></li>
+          <li><strong>اجتماع عبر الإنترنت</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (اجتماع فردي، يرجى الحجز مسبقاً)</li>
           <li><strong>ينكدين</strong>: <a href="https://www.linkedin.com/in/xuhong" target="_blank"><span
                 class='blue'>linkedin.com/in/xuhong</span></a><br /></li>
           <li><strong>معرف جوجل الباحث العلمي</strong>: <a
@@ -912,7 +998,7 @@
     <footer class="eleven center-column">
       <!--<img src="images/logoline.png" width="80%" />-->
       <div class="flex-container">
-        <div id="date-display"></div>
+
         <div><a href="//24timezones.com/San-Francisco/time" style="text-decoration: none;color:#f35212" class="clock24"
             id="tz24-1705207058-c1224-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
             title="Clock - San Francisco" target="_blank" rel="nofollow">فانكوفر</a></div>
@@ -943,17 +1029,18 @@
             title="Beijing time now" target="_blank" rel="nofollow">بكين</a></div>
         <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
 
+        <div id="date-display"></div>
+
       </div>
       <hr class="large" />
       </hr>
       <p>لعبة <strong>محدودة</strong> تُلعب لأجل <strong>الفوز</strong>، بينما تُلعب <strong>لعبة لا نهائية</strong>
         لأجل <strong>الاستمرار في اللعب</strong>.<br />
-        <small>حقوق النشر © 2016-
+        <small>حقوق النشر © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | الدكتور هونغ شو
-          | تحديث: 11.2023
+          | تحديث: 08.2024
         </small>
       </p>
-
 
     </footer>
 
