--- a/ar-resume.html
+++ b/ar-resume.html
@@ -717,7 +717,9 @@
         <h3 style="text-align: right;">تواصل معي</h3>
         <ul class="square" style="text-align: right; direction: rtl;">
           <li><strong>البريد الإلكتروني</strong>: <a href="mailto:h.xu@tum.de" target="_blank"><span class='blue'>h.xu
-                [at] tum.de</span></a><br />لا تتردد في التواصل معي في حالة أي تعاون أو طلبات. :-)</li>
+                [at] tum.de</span></a> (لا تتردد في التواصل معي في حالة أي تعاون أو طلبات. :-)<br></li>
+          <li><strong>اجتماع عبر الإنترنت</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (اجتماع فردي، يرجى الحجز مسبقاً)</li>
           <li><strong>ينكدين</strong>: <a href="https://www.linkedin.com/in/xuhong" target="_blank"><span
                 class='blue'>linkedin.com/in/xuhong</span></a><br /></li>
           <li><strong>معرف جوجل الباحث العلمي</strong>: <a
@@ -746,7 +748,7 @@
     <footer class="eleven center-column">
       <!--<img src="images/logoline.png" width="80%" />-->
       <div class="flex-container">
-        <div id="date-display"></div>
+
         <div><a href="//24timezones.com/San-Francisco/time" style="text-decoration: none;color:#f35212" class="clock24"
             id="tz24-1705207058-c1224-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
             title="Clock - San Francisco" target="_blank" rel="nofollow">فانكوفر</a></div>
@@ -777,14 +779,16 @@
             title="Beijing time now" target="_blank" rel="nofollow">بكين</a></div>
         <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
 
+        <div id="date-display"></div>
+
       </div>
       <hr class="large" />
       </hr>
       <p>لعبة <strong>محدودة</strong> تُلعب لأجل <strong>الفوز</strong>، بينما تُلعب <strong>لعبة لا نهائية</strong>
         لأجل <strong>الاستمرار في اللعب</strong>.<br />
-        <small>حقوق النشر © 2016-
+        <small>حقوق النشر © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | الدكتور هونغ شو
-          | تحديث: 11.2023
+          | تحديث: 08.2024
         </small>
       </p>
 
