--- a/cn-activities.html
+++ b/cn-activities.html
@@ -1739,6 +1739,8 @@
         <ul class="square">
           <li><strong>邮箱</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu
                 [at] tum.de</span></a> (合作、咨询或媒体采访，欢迎联系!)</li>
+          <li><strong>线上会议</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (1vs1会议, 请提前预约)</li>
           <li><strong>领英</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
                 class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1800+)<br></li>
           <li><strong>谷歌学术</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -1813,7 +1815,7 @@
 
         <!--<div style="filter: grayscale(100%) opacity(85%) brightness(100%);"><div class="hidden-mobile"><img src="images/logoline.png" width="85%" /></div></div>-->
         <p><strong>有限游戏</strong>以<strong>取胜</strong>为目的，<strong>无限游戏</strong>以<strong>延续</strong>游戏为宗旨。<br><small>版权 ©
-            2016-
+            2016 -
             <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | 徐泓
             <small>博士</small> | 更新: 2024年7月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
           </small></p>
