--- a/en-research.html
+++ b/en-research.html
@@ -813,6 +813,86 @@
       </div>
 
 
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="dissertations">
+        <h3>Dissertations <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>H. Xu</strong> [ETH], Prof. T. J. Schmidt (examiner), Prof. M. Stampanoni (co-examiner),
+            Dr.
+            J.
+            Eller (co-examiner)<br>
+            Subsecond Operando X-ray Tomographic Microscopy of Liquid Water in Polymer Electrolyte Fuel
+            Cells [D]<br>
+            2021 | <strong>PhD Dissertation</strong>. <text style="color:rgb(21, 32, 154)">[ETH Zurich]</text>,
+            Zurich,
+            Switzerland. [<a href="https://doi.org/10.3929/ethz-b-000487441" target="_blank">PDF</a>]
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [TUM], Prof. P. Müller-Buschbaum (examiner), Prof. W. Schmahl
+            (co-examiner),
+            Dr. E.
+            Metwalli (TUM) <br>
+            Structure & Properties of Thermoresponsive DBC Embedded with Metal Oxide Nanoparticles. [D]
+            <br>
+            2016 | <strong>Master Thesis</strong>. <text style="color:rgb(21, 127, 39)">[LMU Munich]</text> & <text
+              style="color:rgb(22, 92, 222)">[TU Munich]</text>. Munich, Germany. [<a
+              href="https://arxiv.org/abs/2007.10111" target="_blank">PDF</a>]
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [BJTU], Prof. H. Zhang (examiner), Prof. B. Liu (co-examiner) <br>
+            Application of Mesoporous SnO2 Materials in Dye-sensitized Solar Cells and Lithium
+            Batteries.
+            [D] <br>
+            2013 | <strong>Bachelor Thesis</strong>. <text style="color:rgb(14, 117, 212)">[Beijing Jiaotong
+              Univ.]</text>. Beijing,
+            China.
+          </li>
+        </ol>
+      </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="dissertations">
+        <h3>Technical Reports <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>H. Xu</strong> [TUM], Dr. B. Vinçon-Leite, Y. Luo<br>
+            Modelling of Cyanobacteria Dynamics for YuQiao Reservoir in Tianjin, China [R] <br>
+            2016 | Training Report. <text style="color:rgb(37, 142, 140)">[École des Ponts ParisTech]</text> & <text
+              style="color:rgb(30, 45, 73)">[École Polytechnique]</text>. Paris, France.
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [UR1], Dr. W. Lu, Dr. A. Madsen, Prof. S. Di Matteo<br>
+            Design and Construction of a Test-Stand for the Split and Delay Line at the European XFEL [R]<br>
+            2015 | Internship Report. <text style="color:rgb(67, 25, 237)">[European XFEL]</text>, Hamburg, Germany. [<a
+              href="https://arxiv.org/abs/2408.01472" target="_blank">PDF</a>]
+          </li>
+        </ol>
+      </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="datasets">
+        <h3>Public Datasets <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>TomoBank: X-ray Imaging Dataset of Fuel Cells</strong><br>
+            Curators: M. Bührer, <strong>H. Xu*</strong> [PSI], F. Marone<br>
+            2019 | U.S. Department of Energy - Argonne National Laboratory © Copyright. Rev. f4253f55. [<a
+              href="https://tomobank.readthedocs.io/en/latest/source/data/docs.data.dynamic.html#fuel-cell-data"
+              target="_blank">Link</a>]
+          </li>
+        </ol>
+      </div>
+
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
@@ -1175,8 +1255,10 @@
         <h3>Contact Me</h3>
         <ul class="square">
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a><br />Please feel free to contact me in case of any
-            collaborations or requests : -)</li>
+                class='blue'>h.xu [at] tum.de</span></a> (Please feel free to contact me in case of any
+            collaborations or requests :-)<br /></li>
+          <li><strong>Online Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (1-on-1 meeting, please book in advance)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>Google Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -1246,9 +1328,9 @@
       </hr>
       <p>A <strong>finite game</strong> is played for <strong>winning</strong>, while an <strong>infinite
           game</strong> is played for <strong>continuing</strong> the play.<br />
-        <small>Copyright © 2016-
+        <small>Copyright © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu |
-          Updated: 07.2024 <a href="https://www.sigmatraffic.com?ref=232975"></a>
+          Updated: 08.2024 <a href="https://www.sigmatraffic.com?ref=232975"></a>
         </small>
       </p>
     </footer>
