--- a/fr-research.html
+++ b/fr-research.html
@@ -791,7 +791,7 @@
         </ol>
       </div>
 
-      <!-- <hr class="display-mobile" style="width:113%">
+      <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
       <div class="doc-section" id="Dissertations">
         <h3>Thèses</h3>
@@ -820,7 +820,48 @@
               Chine, 2013.</em> [<a href="" target="_blank">PDF</a>]
           </li>
         </ol>
-      </div> -->
+      </div>
+
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="tech-reports">
+        <h3>Rapports techniques <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>H. Xu</strong> [TUM], Dr. B. Vinçon-Leite, Y. Luo<br>
+            Modélisation de la dynamique des cyanobactéries pour le réservoir de YuQiao à Tianjin, Chine [R] <br>
+            2016 | Rapport de formation. <text style="color:rgb(37, 142, 140)">[École des Ponts ParisTech]</text> &
+            <text style="color:rgb(30, 45, 73)">[École Polytechnique]</text>. Paris, France.
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [UR1], Dr. W. Lu, Dr. A. Madsen, Prof. S. Di Matteo<br>
+            Conception et construction d'un banc de test pour la ligne de séparation et de retardement au XFEL européen
+            [R]<br>
+            2015 | Rapport de stage. <text style="color:rgb(67, 25, 237)">[XFEL européen]</text>, Hambourg, Allemagne.
+            [<a href="https://arxiv.org/abs/2408.01472" target="_blank">PDF</a>]
+          </li>
+        </ol>
+      </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="datasets">
+        <h3>Jeux de données publics <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>TomoBank: Jeu de données d'imagerie par rayons X de piles à combustible</strong><br>
+            Conservateurs: M. Bührer, <strong>H. Xu*</strong> [PSI], F. Marone<br>
+            2019 | Département de l'Énergie des États-Unis - Laboratoire National d'Argonne © Droits d'auteur. Rev.
+            f4253f55. [<a
+              href="https://tomobank.readthedocs.io/en/latest/source/data/docs.data.dynamic.html#fuel-cell-data"
+              target="_blank">Lien</a>]
+          </li>
+        </ol>
+      </div>
 
 
       <hr class="display-mobile" style="width:113%">
@@ -954,8 +995,11 @@
         <h3>Contactez-moi</h3>
         <ul class="square">
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a><br />N'hésitez pas à me contacter pour toute collaboration ou
-            demande :- )</li>
+                class='blue'>h.xu [at] tum.de</span></a> (N'hésitez pas à me contacter pour toute collaboration ou
+            demande!)<br /></li>
+          <li><strong>Réunion en ligne</strong> : <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (réunion en tête-à-tête, veuillez réserver à
+            l'avance)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>ID Google Scholar</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -1015,9 +1059,9 @@
       </div>
       <hr class="large" />
       <p><strong>Un jeu fini</strong> est joué pour gagner, tandis qu'<strong>un jeu infini</strong> est joué pour
-        continuer le jeu.<br /><small>Droit d'auteur © 2016-
+        continuer le jeu.<br /><small>Droit d'auteur © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hóng Xú |
-          Actualisé: 03.2023
+          Actualisé: 08.2024
         </small></p>
     </footer>
 
