--- a/it-research.html
+++ b/it-research.html
@@ -751,7 +751,79 @@
         </ol>
       </div>
 
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
 
+      <div class="doc-section" id="dissertations">
+        <h3>Tesi <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>H. Xu</strong> [ETH], Prof. T. J. Schmidt (esaminatore), Prof. M. Stampanoni (co-esaminatore),
+            Dr. J. Eller (co-esaminatore)<br>
+            Microscopia Tomografica a Raggi X Subsecondo Operante dell'Acqua Liquida nelle Celle a Combustibile con
+            Elettrolita Polimero [D]<br>
+            2021 | <strong>Tesi di Dottorato</strong>. <text style="color:rgb(21, 32, 154)">[ETH Zurigo]</text>,
+            Zurigo, Svizzera. [<a href="https://doi.org/10.3929/ethz-b-000487441" target="_blank">PDF</a>]
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [TUM], Prof. P. Müller-Buschbaum (esaminatore), Prof. W. Schmahl
+            (co-esaminatore), Dr. E. Metwalli <br>
+            Struttura e Proprietà di DBC Termoresponsivi Incorporati con Nanoparticelle di Ossido Metallico [D] <br>
+            2016 | <strong>Tesi di Master</strong>. <text style="color:rgb(21, 127, 39)">[LMU Munich]</text> & <text
+              style="color:rgb(22, 92, 222)">[TU Munich]</text>. Monaco di Baviera, Germania. [<a
+              href="https://arxiv.org/abs/2007.10111" target="_blank">PDF</a>]
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [BJTU], Prof. H. Zhang (esaminatore), Prof. B. Liu (co-esaminatore) <br>
+            Applicazione dei Materiali Mesoporosi di SnO2 nelle Celle Solari Sensibilizzate con Colorante e nelle
+            Batterie al Litio [D] <br>
+            2013 | <strong>Tesi di Laurea</strong>. <text style="color:rgb(14, 117, 212)">[Università Jiaotong di
+              Pechino]</text>. Pechino, Cina.
+          </li>
+        </ol>
+      </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="tech-reports">
+        <h3>Rapporti Tecnici <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>H. Xu</strong> [TUM], Dr. B. Vinçon-Leite, Y. Luo<br>
+            Modellazione della Dinamica delle Cianobatteri per il Bacino di YuQiao a Tianjin, Cina [R] <br>
+            2016 | Rapporto di Formazione. <text style="color:rgb(37, 142, 140)">[École des Ponts ParisTech]</text> &
+            <text style="color:rgb(30, 45, 73)">[École Polytechnique]</text>. Parigi, Francia.
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [UR1], Dr. W. Lu, Dr. A. Madsen, Prof. S. Di Matteo<br>
+            Progettazione e Costruzione di un Banco di Prova per la Linea di Separazione e Ritardo al XFEL Europeo
+            [R]<br>
+            2015 | Rapporto di Stage. <text style="color:rgb(67, 25, 237)">[European XFEL]</text>, Amburgo, Germania.
+            [<a href="https://arxiv.org/abs/2408.01472" target="_blank">PDF</a>]
+          </li>
+        </ol>
+      </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="datasets">
+        <h3>Set di Dati Pubblici <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>TomoBank: Set di Dati di Imaging a Raggi X per Celle a Combustibile</strong><br>
+            Curatori: M. Bührer, <strong>H. Xu*</strong> [PSI], F. Marone<br>
+            2019 | Dipartimento dell'Energia degli Stati Uniti - Laboratorio Nazionale di Argonne © Copyright. Rev.
+            f4253f55. [<a
+              href="https://tomobank.readthedocs.io/en/latest/source/data/docs.data.dynamic.html#fuel-cell-data"
+              target="_blank">Link</a>]
+          </li>
+        </ol>
+      </div>
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
@@ -886,8 +958,11 @@
         <h3>Contattami</h3>
         <ul class="square">
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a><br />Non esitate a contattarmi per qualsiasi collaborazione o
-            richiesta :- )</li>
+                class='blue'>h.xu [at] tum.de</span></a> (Non esitate a contattarmi per qualsiasi collaborazione o
+            richiesta!)<br /></li>
+          <li><strong>Riunione online</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (riunione 1 a 1, si prega di prenotare in anticipo)
+          </li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>ID Google Scholar</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -947,9 +1022,9 @@
       </div>
       <hr class="large" />
       <p><strong>Una partita finita</strong> viene giocata per vincere, mentre <strong>una partita infinita</strong>
-        viene giocata per continuare la partita.<br /><small>Copyright © 2016-
+        viene giocata per continuare la partita.<br /><small>Copyright © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu |
-          Aggiornato: 03.2023
+          Aggiornato: 08.2024
           </piccolo>
       </p>
     </footer>
