--- a/kr-resume.html
+++ b/kr-resume.html
@@ -833,7 +833,9 @@
         <h3>저에게 연락</h3>
         <ul class="square">
           <li><strong>이메일</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu
-                [at] tum.de</span></a><br />협업이나 요청이 있으시면 언제든지 저에게 연락 주시기 바랍니다 :- )</li>
+                [at] tum.de</span></a> (협업이나 요청이 있으시면 언제든지 저에게 연락 주시기 바랍니다 :-)<br /></li>
+          <li><strong>온라인 회의</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (1대1 회의, 사전 예약 바랍니다)</li>
           <li><strong>링크드인</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
                 class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>구글 학자 아이디</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -900,11 +902,11 @@
       </div>
 
       <hr class="large" />
-      <p>이기기 위해 유한 게임을 하고, 플레이를 계속하기 위해 무한 게임을 합니다. <br /><small>저작권 © 2016-
+      <p>이기기 위해 유한 게임을 하고, 플레이를 계속하기 위해 무한 게임을 합니다. <br /><small>저작권 © 2016 -
           <script
             id="second-script">const currentYear2 = new Date().getFullYear(); document.write(currentYear2);</script> |
           홍쉬 박사 | 업데이트 날짜:
-          2023년 3월
+          2024년 8월
         </small>
 
       </p>
