--- a/kr.html
+++ b/kr.html
@@ -527,7 +527,7 @@
         박사는 독일 산업계에서 <strong>신 에너지 동력 시스템</strong> 전문 엔지니어로 활동하며, <strong>에너지와 교통</strong> 분야의 <strong>탄소 중립</strong>을
         실현하기 위해 노력하고 있습니다. 그는 <strong>유엔 본 클라이메트 변화 컨퍼런스</strong>에서 "중국의 에너지 전환과 기술 혁신" 주제의 세션을 주관하고, 유엔 유럽 경제위원회의 교통과
         기후 <strong>전문가 그룹 회의</strong>에 참여했습니다. 그는 학위 과정 중에 국제 기업 및 중유럽 학술 기관과 협력하여 <strong>15편 이상의 논문</strong>을 발표하고,
-        <strong>280회 이상 인용</strong>되었으며, <strong>3개의 특허</strong>를 획득했습니다. 또한 그는 에너지와 교통 분야에서 7개의 고 영향력 저널의
+        <strong>300회 이상 인용</strong>되었으며, <strong>3개의 특허</strong>를 획득했습니다. 또한 그는 에너지와 교통 분야에서 7개의 고 영향력 저널의
         <strong>심사위원</strong>을 맡고 있으며, <strong>스위스 성갈렌 국제 경제 포럼</strong>의 <strong>학술 심사위원</strong>도 맡고 있습니다. 그는 미국 전기화학회
         논문 초대 및 여행상, 인텔 엣지 AI 장학금, 유럽연합 에라스무스 장학금, 중국 "도전컵" 창업 국가 동상 등을 수상했습니다.
       </p>
@@ -704,7 +704,9 @@
         <h3>저에게 연락</h3>
         <ul class="square">
           <li><strong>이메일</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu
-                [at] tum.de</span></a><br />협업이나 요청이 있으시면 언제든지 저에게 연락 주시기 바랍니다 :- )</li>
+                [at] tum.de</span></a> (협업이나 요청이 있으시면 언제든지 저에게 연락 주시기 바랍니다 :-)<br /></li>
+          <li><strong>온라인 회의</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (1대1 회의, 사전 예약 바랍니다)</li>
           <li><strong>링크드인</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
                 class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>구글 학자 아이디</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -766,11 +768,11 @@
       </div>
 
       <hr class="large" />
-      <p>이기기 위해 유한 게임을 하고, 플레이를 계속하기 위해 무한 게임을 합니다. <br /><small>저작권 © 2016-
+      <p>이기기 위해 유한 게임을 하고, 플레이를 계속하기 위해 무한 게임을 합니다. <br /><small>저작권 © 2016 -
           <script
             id="second-script">const currentYear2 = new Date().getFullYear(); document.write(currentYear2);</script> |
           홍쉬 박사 | 업데이트 날짜:
-          2023년 3월
+          2024년 8월
         </small>
 
       </p>
