--- a/ru-activities.html
+++ b/ru-activities.html
@@ -798,7 +798,8 @@
               света</span>」</small></small></h3>
       <h3 class="display-mobile">Изображение
         <small><small>「<span>Встреча/Церемония</span>」</small></small><br><small><small><small>▷ <span
-                id="subsection-title-mobile">Встреча/Церемония</span></small></small></small></h3>
+                id="subsection-title-mobile">Встреча/Церемония</span></small></small></small>
+      </h3>
 
       <!-- <div class="doc-section hidden-mobile" id="photography">
         <div class="gallery-wrap">
@@ -1318,7 +1319,11 @@
         <h3>Свяжитесь со мной</h3>
         <ul class="square">
           <li><strong>Эл. адрес</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a><br /></li>
+                class='blue'>h.xu [at] tum.de</span></a> (Для сотрудничества, консультаций или интервью свяжитесь со
+            мной!)<br /></li>
+          <li><strong>Встреча</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (встреча один на один, пожалуйста, бронируйте
+            заранее)</li>
           <li><strong>ЛинкедИн</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>Google Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -1377,9 +1382,9 @@
       </div>
       <hr class="large" />
       <p><strong>Конечная игра</strong> проводится для <strong>выигрыша</strong>, а <strong>бесконечная игра</strong>
-        используется для <strong>продолжения</strong> игры. <br /><small>Авторское право © 2016-
+        используется для <strong>продолжения</strong> игры. <br /><small>Авторское право © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Доктор Хун Сюй |
-          Обновлено: 03.2023
+          Обновлено: 08.2024
         </small>
 
       </p>
