--- a/ru-research.html
+++ b/ru-research.html
@@ -833,6 +833,48 @@
         </ol>
       </div>
 
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="tech-reports">
+        <h3>Технические отчеты <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>H. Xu</strong> [TUM], Dr. B. Vinçon-Leite, Y. Luo<br>
+            Modelling of Cyanobacteria Dynamics for YuQiao Reservoir in Tianjin, China [R] <br>
+            Перевод: Моделирование динамики цианобактерий для водохранилища Юцзяо в Тяньцзине, Китай [R] <br>
+            2016 | Отчет о тренировке. <text style="color:rgb(37, 142, 140)">[École des Ponts ParisTech]</text> & <text
+              style="color:rgb(30, 45, 73)">[École Polytechnique]</text>. Париж, Франция.
+          </li>
+
+          <li>
+            <strong>H. Xu</strong> [UR1], Dr. W. Lu, Dr. A. Madsen, Prof. S. Di Matteo<br>
+            Design and Construction of a Test-Stand for the Split and Delay Line at the European XFEL [R]<br>
+            Перевод: Проектирование и строительство тестовой установки для разделительной и задерживающей линии на
+            Европейском
+            XFEL [R]<br>
+            2015 | Отчет о стажировке. <text style="color:rgb(67, 25, 237)">[European XFEL]</text>, Гамбург, Германия.
+            [<a href="https://arxiv.org/abs/2408.01472" target="_blank">PDF</a>]
+          </li>
+        </ol>
+      </div>
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="datasets">
+        <h3>Публичные наборы данных <small><small></small></small></h3>
+        <ol>
+          <li>
+            <strong>TomoBank: Набор данных рентгеновской томографии топливных элементов</strong><br>
+            Кураторы: M. Bührer, <strong>H. Xu*</strong> [PSI], F. Marone<br>
+            2019 | Министерство энергетики США - Лаборатория Аргонна © Авторское право. Rev. f4253f55. [<a
+              href="https://tomobank.readthedocs.io/en/latest/source/data/docs.data.dynamic.html#fuel-cell-data"
+              target="_blank">Ссылка</a>]
+          </li>
+        </ol>
+      </div>
+
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
@@ -1067,7 +1109,11 @@
         <h3>Свяжитесь со мной</h3>
         <ul class="square">
           <li><strong>Эл. адрес</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a><br /></li>
+                class='blue'>h.xu [at] tum.de</span></a> (Для сотрудничества, консультаций или интервью свяжитесь со
+            мной!)<br /></li>
+          <li><strong>Встреча</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (встреча один на один, пожалуйста, бронируйте
+            заранее)</li>
           <li><strong>ЛинкедИн</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
           <li><strong>Google Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
@@ -1124,9 +1170,9 @@
       </div>
       <hr class="large" />
       <p><strong>Конечная игра</strong> проводится для <strong>выигрыша</strong>, а <strong>бесконечная игра</strong>
-        используется для <strong>продолжения</strong> игры. <br /><small>Авторское право © 2016-
+        используется для <strong>продолжения</strong> игры. <br /><small>Авторское право © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Доктор Хун Сюй |
-          Обновлено: 07.2024
+          Обновлено: 08.2024
         </small>
 
       </p>
