--- a/cn-activities.html
+++ b/cn-activities.html
@@ -493,7 +493,7 @@
       <div>
 
         <p align="justify">
-          一个不会做饭的博士生不是一个好摄影师！穿越四季，跨越山海，烟火人间，唯有美食与爱不可辜负。
+          一个不会做饭的博士生不是一个好摄影师！跨越山海，烟火人间，唯有美食与爱不可辜负。
         </p>
 
         <hr class="display-mobile" style="width:113%">
